--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "lint": "esw webpack.config.* src buildScripts --color",
     "lint:watch": "npm run lint -- --watch",
     "localtunnel": "lt --port 3000",
-    "share": "npm-run-all --parallel open:src localtunnel"
+    "share": "npm-run-all --parallel open:src localtunnel",
+    "test": "mocha --reporter progress buildScripts/testSetup.js \"src/**/*.test.js\""
   },
-  "author": "Cory House",
+  "author": "Terence Biney",
   "license": "MIT",
   "dependencies": {
     "whatwg-fetch": "1.0.0"
