--- a/package.json
+++ b/package.json
@@ -13,9 +13,8 @@
     "test": "mocha --reporter progress buildScripts/testSetup.js \"src/**/*.test.js\"",
     "test:watch": "npm run test -- --watch",
     "generate-mock-data": "babel-node buildScripts/generateMockData",
-    "prestart-mockapi":"npm run generate-mock-data",
+    "prestart-mockapi": "npm run generate-mock-data",
     "start-mockapi": "json-server --watch src/api/db.json --port 3001"
-
   },
   "author": "Terence Biney",
   "license": "MIT",
@@ -41,7 +40,7 @@
     "extract-text-webpack-plugin": "1.0.1",
     "html-webpack-plugin": "2.22.0",
     "jsdom": "9.8.0",
-    "json-schema-faker": "0.3.6",
+    "json-schema-faker": "^0.3.6",
     "json-server": "0.8.22",
     "localtunnel": "1.8.1",
     "mocha": "3.1.2",
